replace stream collectors