@@ -181,7 +181,7 @@ public class OpenLigaDBEventCA2021 extends OpenLigaDBEvent {
 		
 		// among teams there are also Gruppe, Sieger, Verlierer ones. However these have no icons.
 		List<com.msiggi.openligadb.client.Team> oldbRealTeams = 
-				oldbTeams.stream().filter(e->e.getTeamIconURL()!=null && !e.getTeamIconURL().isEmpty()).collect(Collectors.toList());
+				oldbTeams.stream().filter(e->e.getTeamIconURL()!=null && !e.getTeamIconURL().isEmpty()).toList();
 		
 		List<Group> groupList = new ArrayList<>();
 		for (int i=0; i < oldbRealTeams.size() / TEAMS_IN_GROUP; i++) {
